# text-segfault-repro

./: BenchTop.hs  Benchmarks.hs  CHANGELOG.md  DecodeUtf8.hs  README.md  japanese.txt  segfault-repro.cabal
