cabal-version:      3.0
name:               segfault-repro
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Matthew Pickering
maintainer:         matthewtpickering@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable segfault-repro
    import:           warnings
    main-is:          BenchTop.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.17.0.0, text == 2.0.1, bytestring == 0.11.4.0, tasty-bench, template-haskell
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options: -fprefer-byte-code -fbyte-code-and-object-code
